oxiplate-derive/tests/broken/derive/inline-name-value.stderr
error: Incorrect syntax for inline template. Should look something like:
       #[oxiplate_inline(html: "{{ your_var }}")]
 --> tests/broken/derive/inline-name-value.rs:4:3
  |
4 | #[oxiplate_inline = "hello"]
  |   ^^^^^^^^^^^^^^^^^^^^^^^^^
